<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_heading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:weightSum="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_degree"
            android:layout_weight="0.1"
            android:textColor="@color/secondary_text"
            android:textSize="64sp"
            android:id="@+id/degree_txt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/error_weather_txt"
            android:layout_weight="1.9"
            android:paddingLeft="8dp"
            android:textColor="#000"
            android:id="@+id/details_txt" />

    </LinearLayout>

</LinearLayout>