<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/profile_parent_ss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                bootstrap:cardElevation="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/action_profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="52dp">

                    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                        android:id="@+id/user_image"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        bootstrap:bct_image="@mipmap/ic_launcher"
                        bootstrap:bct_minimal="true"
                        bootstrap:bct_size="xlarge" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/user_name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/user_rain_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="I have just stopped the rain 0 times."
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                bootstrap:cardElevation="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/action_edit_profile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="52dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/action_edit_picture"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/browse_pic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Browse..."
                            android:textColor="#000" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/action_edit_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#000" />

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/user_name_txtbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/accent"
                            android:maxLines="1"
                            android:layout_marginRight="12dp"
                            />

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>